tests/valid/test_01.robot
// test_01: Programa mínimo válido - un sensor y main
sensor luz;
rutina main() {
    si luz > 50:
    ejecutar estado_ok();
}
