tests/invalid/error_07.robot
// error_07: [SINTÁCTICO] Falta llave de cierre en rutina
sensor luz;
rutina main() {
    si luz > 30:
        ejecutar activar();

